# github-ai-genius

./: .gitignore  AGENTS.md  Containerfile  LICENSE  Makefile  README.md  STATUS.md  ci.yml.example  compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
agent/: main.py  requirements.txt
agent/auth/: service.py
agent/core/: agent.py  config.py  tools.py  workflow.py
agent/orchestrator/: engine.py
agent/rag/: pipeline.py
agent/services/: llm_factory.py  (+3 more)
cli/: README.md  RELEASE.md  blob.go  branches.go  commit.go  commits_list.go  go.mod  go.sum  index.go  list.go  main.go  markdown.go  post_process.go  readme.go  tags.go  themes.go  utils.go
docs/: ARCHITECTURE.md  GAPS_AND_REBUILD_PLAN.md  READINESS.md  SAFETY.md  USAGE.md
github_ai_genius/: __init__.py  analyzer.py  api.py  api_v2.py  blueprints.py  cli.py  config.py  django_marketplace_assets.py  gap_detector.py  generator.py  github_client.py  indexer.py  llm.py  models.py  multirepo.py  orchestrator.py  policy.py  project_state.py  provider_templates.py  quality.py  readiness_score.py  rebuilder.py  release_manifest.py  release_results.py  request_controls.py  static_audit.py  workspace.py
tests/: test_analyzer.py  test_analyzer_production_signals.py  test_api_v2.py  test_blueprints.py  test_container_and_license.py  test_gap_detector.py  test_generator.py  test_indexer.py  test_multirepo_rebuilder.py  test_orchestrator.py  test_policy.py  test_project_state.py  test_readiness_score.py  test_release_manifest.py  test_release_results.py  test_request_controls.py  test_workspace.py
(+7 files in other folders)
