[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "github-ai-genius"
version = "1.0.0"
description = "A local-first GitHub AI engineering agent with repository analysis, safe code generation, project scaffolding, and GitHub automation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "George Alfred Nyamema" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "httpx>=0.27.0",
  "pygithub>=2.4.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.3",
  "mypy>=1.11.1"
]

[project.scripts]
genius = "github_ai_genius.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["github_ai_genius"]
